fix linter issues 11

--- a/source/main_page/main.css
+++ b/source/main_page/main.css
@@ -239,8 +239,8 @@ p {
 }
 
 /* Apply some fancy things when user hovers to the button */
-#due-date-btn:hover, 
-#section-btn:hover, 
+#due-date-btn:hover,
+#section-btn:hover,
 #assignee-btn:hover {
   background-color: #8ddecb;
   color: rgba(0 0 0 40%);
@@ -353,7 +353,6 @@ p {
 
 /* Create a button with position and size */
 .button {
-
   /* Set the button's position */
   display: flex;
   justify-content: center;
@@ -448,7 +447,7 @@ textarea {
   border-radius: 15px;
 
   /* Set its color and border color */
-  color:#999;
+  color: #999;
   border: 1px solid #c1d3df;
   outline: none;
   font-family: Nunito, sans-serif;
@@ -482,7 +481,7 @@ textarea {
 /* Make a close button to close the pop up form */
 .close {
   /* Set the color of x and the size of it */
-  color: rgb(178, 178, 178);
+  color: rgb(178 178 178);
   float: right;
   font-size: 28px;
   font-weight: bold;
@@ -494,8 +493,7 @@ textarea {
   /* Change x color to be black */
   color: black;
   text-decoration: none;
-  
+
   /* Change cursor to be pointer style */
   cursor: pointer;
 }
-
