--- a/source/main_page/menu.css
+++ b/source/main_page/menu.css
@@ -59,7 +59,7 @@
 
     /* Set position to be absolute and apply curves to four edges */
     position: absolute;
-    border-radius: 10%;
+    border-radius: 15px;
 
     /* Apply padding and move its order to be bottom */
     padding: 0.625rem 0;
@@ -104,7 +104,7 @@ p {
     margin-left: 20px;
     margin-top: 40px;*/
     width: 30%;
-    font-size: 10%;
+    font-size: 15px;
     margin-left: 1.25rem;
     margin-top: 2.5rem;
 
