--- a/source/chore_card/chore_card.css
+++ b/source/chore_card/chore_card.css
@@ -7,12 +7,11 @@
 .grid-container {
   /* Define border shape */
   border-style: solid;
-  border-radius: 20px;
+  border-radius: 1.25rem;
 
   /* Define container sizing */
-  width: 620px;
-  gap: 10px;
-  padding: 10px;
+  width: 90%;
+  padding: 2%;
 
   /* Define grid background color */
   background-color: rgb(181 177 177);
@@ -23,18 +22,17 @@
     "item1 item2 item5"
     "item1 item3 item5"
     "item1 item4 item5";
-  grid-template-columns: 120px 400px 75px;
-  grid-auto-rows: 60px;
+  grid-template-columns: 20% 60% 15%;
+  grid-template-rows: auto auto auto;
 }
 
 .grid-container > div {
   /* Match background color with background of the actual container */
   background-color: rgb(181 177 177);
 
-  /* Align text to the left, adjust its font size, and add padding */
+  /* Align text to the left, adjust its font size */
   text-align: left;
-  padding: 20px 0;
-  font-size: 20px;
+  font-size: 100%;
 }
 
 /* #### Styling for Grid Items #### */
@@ -86,8 +84,8 @@
  */
 #assignee {
   /* Configure size of image */
-  width: 100px;
-  height: 100px;
+  width: 80%;
+  height: auto;
 
   /* Make image rounded */
   border-radius: 50%;
@@ -103,5 +101,5 @@
   background-color: orange;
 
   /* Slightly increase padding around label */
-  padding: 2px;
+  padding: 1.5%;
 }
