--- a/source/chore_card/chore_card.css
+++ b/source/chore_card/chore_card.css
@@ -1,4 +1,14 @@
+@import "https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap";
+
 /* #### General Card Layout #### */
+
+/**
+ * Add padding around chore card
+ * Reference entire article element
+ */
+article{
+  padding: 1%;
+}
 
 /**
  * Create grid display to organize items in chore card
@@ -6,15 +16,14 @@
  */
 .grid-container {
   /* Define border shape */
-  border-style: solid;
   border-radius: 1.25rem;
 
   /* Define container sizing */
-  width: 90%;
-  padding: 2%;
+  width: 96%;
+  padding: 1.8%;
 
   /* Define grid background color */
-  background-color: rgb(181 177 177);
+  background-color: #d9d9d9;
 
   /* Define grid display */
   display: grid;
@@ -22,17 +31,18 @@
     "item1 item2 item5"
     "item1 item3 item5"
     "item1 item4 item5";
-  grid-template-columns: 20% 60% 15%;
-  grid-template-rows: auto auto auto;
+  grid-template-columns: 20% 60% 20%;
+  grid-auto-rows: auto;
 }
 
 .grid-container > div {
   /* Match background color with background of the actual container */
-  background-color: rgb(181 177 177);
+  background-color: #d9d9d9;
 
-  /* Align text to the left, adjust its font size */
+  /* Align text to the left, adjust its font characteristics */
   text-align: left;
   font-size: 100%;
+  font-family: Nunito, sans-serif;
 }
 
 /* #### Styling for Grid Items #### */
@@ -63,6 +73,8 @@
 
 .item4 {
   /* Defines item4, the chore label, as the bottom middle grid item from the template */
+  display: flex;
+  align-items: center;
   grid-area: item4;
 }
 
@@ -79,9 +91,9 @@
 /* #### Layout of specific elements #### */
 
 /**
- * Adjust sizing and additional element properties of specific items in grid
- * References the assignee img, checkbox icon, and label span respectively
- */
+  * Adjust sizing and additional element properties of specific items in grid
+  * References the assignee img, checkbox icon, and label span respectively
+  */
 #assignee {
   /* Configure size of image */
   width: 80%;
@@ -93,13 +105,36 @@
 
 #checkbox {
   /* Configure size of icon */
-  width: 50px;
-  height: 50px;
+  width: 2rem;
+  height: 2rem;
+  /* Shape the border and margin */
+  border-style: none;
+  border-radius: 0.5rem;
+  margin: 0.2rem;
 }
 
+/**
+ * Define styling for section label
+ * References label id
+ */
 #label {
+  /* Styling the label */
   background-color: orange;
+  border-radius: 0.5rem;
 
-  /* Slightly increase padding around label */
+  /* Slightly increase padding and margin around label */
   padding: 1.5%;
+  margin-block-start: 0.5rem;
+  margin-block-end: 0.5rem;
+}
+
+/**
+ * Define styling for chore name and due date
+ * Reference class name and class date
+ */
+h3,
+h4{
+  /* Overwrite default top and bottom margin */
+  margin-block-start: 0.5rem;
+  margin-block-end: 0.5rem;
 }
