--- a/source/chore_card/chore_card.css
+++ b/source/chore_card/chore_card.css
@@ -133,13 +133,14 @@ article {
  * Define styling for chore name, assignee, and due date
  * Reference heading elements 3 and 4
  */
-h3{
+h3 {
   /* Overwrite default top and bottom margin */
   margin-block-start: 0.5rem;
   margin-block-end: 0.5rem;
 }
-h4{
+
+h4 {
   /* Overwrite default top and bottom margin */
-  margin-block-start: 0rem;
+  margin-block-start: 0;
   margin-block-end: 0.5rem;
 }
